 When instances are fetched from a remote service the mock client is checked first to see if it is already holding the instance. If it is then it is used.
 Added a new `mock_ua` test decorator that can be used to set expectations for the user agent so that proxies (and other communication with the Slumber user agent) can be much more easily tested.

2012-05-30  Kirit Saelensminde  <kirit@felspar.com>
 Changed the type name for the instance type so we no longer need to do any model look ups to calculate the name.

2012-05-24  Kirit Saelensminde  <kirit@felspar.com>
 Optimised the solution to application of the client proxies to delay as long as possible HTTP requests. Many uses of remote instances no longer trigger any HTTP requests at all.

2012-05-23  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a problem where client proxies weren't always being applied properly when instances were fetched out of the database. The current solution solves it by forcing a HTTP request, but there should be a better way of doing this.

2012-05-18  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a problem with deep copies of remote objects that was causing Django to throw errors when they were used in certain types of query.
 Added a number of attributes to the instance proxy that it will never have, so just throw an attribute error for them straight away. This cuts down on HTTP chatter, especially in tests.

2012-05-17  Kirit Saelensminde  <kirit@felspar.com>
 The create operation now resets the sequence numbers in case a primary key on an auto-increment field is specified.
 The user agent get function can now also be given status codes that it will accept as expected.
 The TTL on proxies is now set to two seconds. There are circumstances under which this might be unsafe. The user agent remains with a zero second TTL.

2012-05-16  Kirit Saelensminde  <kirit@felspar.com>