@@ -175,7 +175,7 @@ class TestMockWithDatabase(ServiceTestsWithDirectory, django.test.TestCase):
         self.assertEqual(self.order.shop.pk, 1)
         self.assertEqual(self.order.shop.slug, 'test-shop-1')
 
-    @mock_client(django__contrib__auth__User=[{
+    @mock_client(pizzas__django__contrib__auth__User=[{
             'pk': 1, 'id': 1, 'username': 'test-user-1',
                 'is_active': True, 'is_staff': False, 'is_superuser': False,
                 'date_joined': date(2011, 05, 23),
@@ -187,15 +187,15 @@ class TestMockWithDatabase(ServiceTestsWithDirectory, django.test.TestCase):
                 'first_name': 'test2', 'last_name': 'user', 'email': 'test-user-2@example.com'
         }])
     def test_model_proxy_is_applied(self):
-        self.assertTrue(hasattr(client.django.contrib.auth.User, 'authenticate'))
+        self.assertTrue(hasattr(client.pizzas.django.contrib.auth.User, 'authenticate'))
         def post(url, data):
             self.assertEqual(url,
-                'slumber://django/contrib/auth/User/authenticate/')
+                'slumber://pizzas/django/contrib/auth/User/authenticate/')
             return None, {'authenticated': True, 'user': {
-                'url': 'slumber://django/contrib/auth/User/data/2/',
+                'url': 'slumber://pizzas/django/contrib/auth/User/data/2/',
                     'display_name': 'test2 user'}}
         with mock.patch('slumber.connector.proxies.post', post):
-            user = client.django.contrib.auth.User.authenticate()
+            user = client.pizzas.django.contrib.auth.User.authenticate()
             self.assertEqual(user, User.objects.get(username='test-user-2'))
 
 
